comsponents refactoring with useReducer, useContext

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project_showcase",
-  "homepage":"https://armdevrus.github.io/react-shop/",
+  "homepage":"https://armdevrus.github.io/react-shop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
